syntax = "proto3";
option go_package = "github.com/floppyzedolfin/sync/services/reference";

package reference;

service Reference {
  // Send a notification about a change of contents in the file system
  rpc  Patch(PatchRequest) returns (PatchResponse) {}
  // Delete an entity on the file system
  rpc Delete(DeleteRequest) returns (DeleteResponse) {}
}

// PatchRequest holds the information about an item that has changed
message PatchRequest {
  string fullPath = 1;
  string fullContents = 2;
  uint32 rights = 3;
}

// PatchResponse is empty so far - we'll either return an error or nothing
// "No news is good news" -- Aegeus
message PatchResponse {
}

// DeleteRequest contains the path of the entity to delete
message DeleteRequest {
  string fullPath = 1;
}

// DeleteResponse is always empty
message DeleteResponse {
}